chore: worktree mode hardening, Pencil CLI fixes, pipeline review feedback
- Add developer_id/developer_variant to config for worktree mode
- Coordinator owns all task directory writes; developer emits signals only
- Coordinator sends step definitions one at a time (not upfront)
- Artifact ownership table: every artifact has stated writer
- Mock handoff: coordinator reads from worktree path, copies to task dir
- Scope relay protocol to direct mode; worktree uses its own relay
- Step 0 branches on pipeline_mode (direct 5-7, worktree 5-9)
- Restart branches on mode with worktree recovery and mode pinning
- state.md schema gains pipeline_mode and worktree_path fields
- Abort/merge add git worktree remove before branch delete
- Iteration limits stated per-pipeline (not cross-branch)
- pen_cli corrected from pencil to pen; Step 2.5 reads from config
- Pencil fallback changed from ASCII to mock.html
- In-place pen regenerate replaced with temp-file then move
- PEN_CLI_KEY marked env-var-only in config
- developer_variant corrected from xhigh to high (zai provider limit)
- Removed empty ## Models header from config
- Removed duplicated review rules from project orchestrator
- Moved generic templates to global; project keeps mock.md + DoD only
- iterations/N-review.md and N-response.md split in task dir list
- Reviewer mock checklist covers both Pencil and mock.html fallback